k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-demo
  template:
    metadata:
      labels:
        app: secret-demo
    spec:
      containers:
        - name: app
          image: ghcr.io/volraton/vks-secret-store-demo:7fce8b2417f2809debffca9758ea0bc293ee0e89
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: secret-demo
  namespace: demo
spec:
  selector:
    app: secret-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
