k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-demo-lb
  namespace: demo
  labels:
    app: secret-demo
    component: foundation-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: secret-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  externalTrafficPolicy: Cluster
